--- a/src/app/component/other-bar/other-bar.component.html
+++ b/src/app/component/other-bar/other-bar.component.html
@@ -1,4 +1,7 @@
 <div class="wrapper d-flex" style="flex-direction: column;">
-    <div class="col-12 clock-wrapper d-flex"></div>
+    <div class="col-12 clock-wrapper d-flex align-items-center">
+        <div class="col-lg-12 d-flex animate__bounceIn" style="justify-content: center;">
+        </div>
+    </div>
     <div class="col-12 date-wrapper d-flex"></div>
 </div>
