--- a/src/app/page/home/home.component.html
+++ b/src/app/page/home/home.component.html
@@ -1,40 +1,44 @@
 <div class="wrapper sc d-flex" style="flex-direction: column;">
     <div class="col-12 resume-wrapper d-flex align-items-center">
-            <div class="col-lg-4 col-md-12 animate__bounceIn left-box overflow-y">
-                <div class="card">
-                    <h1 class="neme">Lu .<br>WeiCheng</h1>
-                    <div class="detial">
-                        <p>邏輯清晰，具換位思考能力，擅長溝通合作，簡化複雜概念。</p>
-                        <p>對待工作熱情、當責。</p>
+        <div class="col-lg-4 col-md-12 animate__bounceIn left-box overflow-y">
+            <div class="card">
+                <h1 class="neme">Lu .<br>WeiCheng</h1>
+                <div class="detial">
+                    <p>邏輯清晰，具換位思考能力，擅長溝通合作，簡化複雜概念。</p>
+                    <p>對待工作熱情、當責。</p>
 
-                    </div>
-                    <h2>[ 關於我 ]</h2>
-                    <div class="detial">
-                        <p>陸韋呈</p>
-                        <p>前端工程師，網站開發經驗一年，專注於Angular相關技術，後端主要使用Asp.net core，SignalR做API和即時資訊交換。</p>
-                        <p>性格: ISFJ</p>
-                        <p>座右銘: 嘗試過。失敗過。再試一次。又失敗。比失敗進步一些。</p>
-                        <p>大學: 勤益科技大學資訊管理系</p>
-                        <p>高中: 南投高中電腦機械製圖科</p>
-                    </div>
+                </div>
+                <h2>[ 關於我 ]</h2>
+                <div class="detial">
+                    <p>陸韋呈</p>
+                    <p>前端工程師，網站開發經驗一年，專注於Angular相關技術，後端主要使用Asp.net core，SignalR做API和即時資訊交換。</p>
+                    <p>性格: ISFJ</p>
+                    <p>座右銘: 嘗試過。失敗過。再試一次。又失敗。比失敗進步一些。</p>
+                    <p>大學: 勤益科技大學資訊管理系</p>
+                    <p>高中: 南投高中電腦機械製圖科</p>
+                </div>
 
-                    <h2 class="sc">[ 求學及工作經歷 ]</h2>
-                    <div class="detial">
-                        <p>大學就讀勤益資管系，在這裡我瞭解到了自身的不足，大部分的教學對我來說都是完全新的領域，不過我也可以很快的適應，靠著自己的休假時段來複習課程，比別人更努力一點才有辦法追上大家。</p>
-                        <p>自從大學接觸程式語言後深深地被吸引，勤益資管系灌輸了初步的資訊科技與商業管理知識，使我對這方面產生濃厚興趣。在課堂上我總是能比其他同學更迅速的找到BUG並處理完成，雖然不是很困難的問題，但我自認細心度以及專注力是比其他人更好的，我認為這是我的優勢。</p>
-                        <p>由於程式設計的課程不多，我便開啟了我自學的路途，但資訊這一塊是不斷在更新的，一方面要彌補自己編碼的基本功，還要不斷的更新網路上的新知識，以便於以後在職場上不會發生太大的差距。儘管目前僅有假日的空閒時間能多增強技術能力，但只要有時間我就會沉浸在程式碼裡面。</p>
-                        <p>在畢業前開始在業界從事前端的工作，工作內容大部份為資料視覺化，工作內容主要負責API和WEB的開發，前後端的串接，同時也接觸Modbus TCP/RTU等資料傳輸。</p>
-                        <p>曾協助傳統工廠開發進銷存系統，從零到一百的完整建置經驗，與客戶的藍圖發想、設定目標、討論功能、實作、測試、上架，到最後的驗收與使用者反饋，並持續版本更新與迭代。整個專案架構的規劃到程式的撰寫，SQL，IIS，WEB架設(Angular)</p>
-                    </div>
+                <h2 class="sc">[ 求學及工作經歷 ]</h2>
+                <div class="detial">
+                    <p>大學就讀勤益資管系，在這裡我瞭解到了自身的不足，大部分的教學對我來說都是完全新的領域，不過我也可以很快的適應，靠著自己的休假時段來複習課程，比別人更努力一點才有辦法追上大家。</p>
+                    <p>自從大學接觸程式語言後深深地被吸引，勤益資管系灌輸了初步的資訊科技與商業管理知識，使我對這方面產生濃厚興趣。在課堂上我總是能比其他同學更迅速的找到BUG並處理完成，雖然不是很困難的問題，但我自認細心度以及專注力是比其他人更好的，我認為這是我的優勢。</p>
+                    <p>由於程式設計的課程不多，我便開啟了我自學的路途，但資訊這一塊是不斷在更新的，一方面要彌補自己編碼的基本功，還要不斷的更新網路上的新知識，以便於以後在職場上不會發生太大的差距。儘管目前僅有假日的空閒時間能多增強技術能力，但只要有時間我就會沉浸在程式碼裡面。</p>
+                    <p>在畢業前開始在業界從事前端的工作，工作內容大部份為資料視覺化，工作內容主要負責API和WEB的開發，前後端的串接，同時也接觸Modbus TCP/RTU等資料傳輸。</p>
+                    <p>曾協助傳統工廠開發進銷存系統，從零到一百的完整建置經驗，與客戶的藍圖發想、設定目標、討論功能、實作、測試、上架，到最後的驗收與使用者反饋，並持續版本更新與迭代。整個專案架構的規劃到程式的撰寫，SQL，IIS，WEB架設(Angular)</p>
+                </div>
 
-                    <h2 class="sc">[ 未來展望 ]</h2>
-                    <div class="detail">
-                        <p>將自己對編碼的熱誠展現在職場上，在不斷的學習與求知中，讓自己在職場上的效益遠高於將工作視為一份工作，遇到自己不會的問題就問到會，一直保持這樣的態度讓自己可以更全能。</p>
-                        <p>在就業以及接案的過程收穫良多，除了精進技術實力，也包括溝通能力、團隊合作、提前預防問題發生、評估開發時程等。
-                            未來期望繼續往開發深耕，相信以我的經歷及熱忱，能在職場中發揮最大效用，做出最棒的軟體產品！</p>
-                    </div>
+                <h2 class="sc">[ 未來展望 ]</h2>
+                <div class="detail">
+                    <p>將自己對編碼的熱誠展現在職場上，在不斷的學習與求知中，讓自己在職場上的效益遠高於將工作視為一份工作，遇到自己不會的問題就問到會，一直保持這樣的態度讓自己可以更全能。</p>
+                    <p>在就業以及接案的過程收穫良多，除了精進技術實力，也包括溝通能力、團隊合作、提前預防問題發生、評估開發時程等。
+                        未來期望繼續往開發深耕，相信以我的經歷及熱忱，能在職場中發揮最大效用，做出最棒的軟體產品！</p>
                 </div>
             </div>
+        </div>
+        <div class="col-lg-4"></div>
+        <div class="col-lg-4 d-flex flex-row-reverse clock animate__bounceIn" style="align-self: flex-start; margin-top: 50px">
+            <app-clock></app-clock>
+        </div>
     </div>
 
     <div class="col-12 skill-wrapper d-flex align-items-center flex-column flex-md-row" >
