--- a/src/app/page/home/home.component.scss
+++ b/src/app/page/home/home.component.scss
@@ -7,6 +7,7 @@
     background-size: auto;
     padding: 10px;
     .resume-wrapper{
+        background-color: antiquewhite;
         height: 60%;
         flex: 0 0 60%;
         h1{
@@ -74,31 +75,6 @@
     // }
 }
 
-// 小螢幕的尺寸
-@media (max-width: 991px) {
-    .wrapper {
-        height: auto;
-        gap: 10px;
-    }
-    .resume-wrapper, .skill-wrapper{
-        height: auto;
-        flex: 0 0 auto;
-        gap: 10px;
-    }
-    .skill-wrapper{
-        .left-box {
-            width: 100%;
-            .progress {
-                width: 260px;
-            }
-        }
-        .right-box {
-            width: 100%;
-            height: 300px !important;
-        }
-    }
-}
-
 .card {
     color: #FBFAFF;
     background-color: transparent;
@@ -132,3 +108,37 @@
 .job-active {
     border-color: $ice-blue !important; /* 激活状态时的边框颜色 */
 }
+
+
+// 小螢幕的尺寸
+@media (max-width: 991px) {
+    .wrapper {
+        height: auto;
+        gap: 10px;
+    }
+    .resume-wrapper, .skill-wrapper{
+        height: auto;
+        flex: 0 0 auto;
+        gap: 10px;
+    }
+    .skill-wrapper{
+        .left-box {
+            width: 100%;
+            .progress {
+                width: 260px;
+            }
+        }
+        .right-box {
+            width: 100%;
+            height: 300px !important;
+        }
+    }
+}
+
+// 手機
+@media (max-width: 768px){
+    .clock{
+        display: none !important;
+    }
+}
+
