--- a/src/app/component/other-bar/other-bar.component.html
+++ b/src/app/component/other-bar/other-bar.component.html
@@ -1,7 +1,15 @@
 <div class="wrapper d-flex" style="flex-direction: column;">
-    <div class="col-12 clock-wrapper d-flex align-items-center">
-        <div class="col-lg-12 d-flex animate__bounceIn" style="justify-content: center;">
+    <div class="col-12 date-wrapper d-flex align-items-center">
+        <div class="col-lg-12 d-flex" style="justify-content: center;">
+            <div class="calendar-container animate__bounceIn">   
+            </div>
         </div>
     </div>
-    <div class="col-12 date-wrapper d-flex"></div>
+    <div class="col-12 other-wrapper d-flex align-items-center">
+        <div class="picture-container animate__bounceIn col-sm-12">
+            <div class="card">
+                <h2 class="d-flex align-items-center"><mat-icon>bolt</mat-icon><div class="sc">Picture</div></h2>
+            </div>
+        </div>
+    </div>
 </div>
