--- a/src/styles.scss
+++ b/src/styles.scss
@@ -28,3 +28,9 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .d-grid {
     display: grid;
 }
+
+.card {
+    color: #FBFAFF;
+    background-color: transparent;
+    border: none;
+}
