手機視窗調整

--- a/src/app/component/clock/clock.component.scss
+++ b/src/app/component/clock/clock.component.scss
@@ -1,7 +1,7 @@
 // 顏色變量
 $primary: rgba(41, 59, 41, 0.8);
 $secondary: rgba(52, 55, 59, 0.8);
-$success: #ff7600;
+$success: #AAD9F1;
 $info: #b1ff00;
 
 .wrapper {
