--- a/src/app/component/other-bar/other-bar.component.html
+++ b/src/app/component/other-bar/other-bar.component.html
@@ -1,15 +1,54 @@
 <div class="wrapper d-flex" style="flex-direction: column;">
     <div class="col-12 date-wrapper d-flex align-items-center">
-        <div class="col-lg-12 d-flex" style="justify-content: center;">
-            <div class="calendar-container animate__bounceIn">   
+      <div class="col-12 contact-box d-flex animate__bounceIn" style="justify-content: center;">
+        <div class="card" style="height: 100%;">
+          <h2 class="d-flex align-items-center">
+            <mat-icon>mail</mat-icon>
+            <div class="sc">與我聯繫</div>
+          </h2>
+          <div class="contact-item col-12">
+            <div class="link d-flex col-12">
+              <div class="circle" style="--clr: #AAD9F1">
+                <fa-icon class="icon circle-icon" [icon]="faGithub"></fa-icon>
+              </div>
+              <div class="circle" style="--clr: #AAD9F1">
+                <fa-icon class="icon circle-icon" [icon]="faInstagram"></fa-icon>
+              </div>
+              <div class="circle" style="--clr: #AAD9F1">
+                <fa-icon class="icon circle-icon" [icon]="faFacebook"></fa-icon>
+              </div>
+              <div class="circle" style="--clr: #AAD9F1">
+                <fa-icon class="icon circle-icon" [icon]="faGoogle"></fa-icon>
+              </div>
+              <div class="circle" style="--clr: #AAD9F1">
+                <fa-icon class="icon circle-icon" [icon]="faPhone" ></fa-icon>
+              </div>
             </div>
-        </div>
+            <div class="clock col-12 animate__bounceIn mobile" >
+              <app-clock></app-clock>
+            </div>
+          </div>
+        </div> 
+      </div>
     </div>
     <div class="col-12 other-wrapper d-flex align-items-center">
-        <div class="picture-container animate__bounceIn col-sm-12">
-            <div class="card">
-                <h2 class="d-flex align-items-center"><mat-icon>bolt</mat-icon><div class="sc">Picture</div></h2>
+        <div class="col-12 picture-box animate__bounceIn">
+          <div class="card" style="height: 100%;">
+            <h2 class="d-flex align-items-center"><mat-icon>bolt</mat-icon><div class="sc">Picture</div></h2>
+            <div class="picture-item">
+              <div class="picture" style="height: 80%;"  >
+                <img class="w-100 d-block animate__backInDown" [attr.style]="currentStyle()" [src]="currentPicture()">
+              </div>
+              <div class="ctrl-btn">
+                <a role="button" (click)="prev()">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                </a>
+                <a role="button" (click)="next()">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                </a>
+              </div>
             </div>
+          </div>
         </div>
     </div>
 </div>
